--- a/currency-conversion-service/pom.xml
+++ b/currency-conversion-service/pom.xml
@@ -35,6 +35,10 @@
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 			<version>4.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
