Maven configuration for building docker image

--- a/currency-exchange-service/pom.xml
+++ b/currency-exchange-service/pom.xml
@@ -97,6 +97,12 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<image>
+						<name>nicholaspilotto/mmv2-${project.artifactId}}:${project.artifactId}</name>
+					</image>
+					<pullPolicy>IF_NOT_PRESENT</pullPolicy>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
