--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -45,5 +45,14 @@ services:
     networks:
       - currency-network
 
+  zipkin-server:
+    image: openzipkin/zipkin:2.23
+    mem_limit: 300m
+    ports:
+      - "9411:9411"
+    networks:
+      - currency-network
+    restart: always #Restart if there is a problem starting up
+
 networks:
   currency-network:
