--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,7 @@ services:
       - naming-server
     environment:
        EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: http://naming-server:8761/eureka
+       MANAGEMENT.ZIPKIN.TRACING.ENDPOINT: http://zipkin-server:9411/api/v2/spans
   
   currency-conversion:
     image: nicholaspilotto/mmv3-currency-conversion-service:0.0.1-SNAPSHOT
@@ -24,6 +25,7 @@ services:
       - naming-server
     environment:
        EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: http://naming-server:8761/eureka
+       MANAGEMENT.ZIPKIN.TRACING.ENDPOINT: http://zipkin-server:9411/api/v2/spans
   
   api-gateway:
     image: nicholaspilotto/mmv3-api-gateway:0.0.1-SNAPSHOT
@@ -36,6 +38,7 @@ services:
       - naming-server
     environment:
        EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: http://naming-server:8761/eureka
+       MANAGEMENT.ZIPKIN.TRACING.ENDPOINT: http://zipkin-server:9411/api/v2/spans
 
   naming-server:
     image: nicholaspilotto/mmv3-naming-server:0.0.1-SNAPSHOT
