--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -55,7 +55,7 @@ services:
       - "9411:9411"
     networks:
       - currency-network
-    restart: always #Restart if there is a problem starting up
+    restart: no #Restart if there is a problem starting up
 
 networks:
   currency-network:
